tests/baselines/reference/declareClassInterfaceImplementation.errors.txt
tests/cases/compiler/declareClassInterfaceImplementation.ts(5,15): error TS2420: Class 'Buffer' incorrectly implements interface 'IBuffer'.
  Missing [string] or [number] index signature in type 'Buffer'.


==== tests/cases/compiler/declareClassInterfaceImplementation.ts (1 errors) ====
    interface IBuffer {
        [index: number]: number;
    }
    
    declare class Buffer implements IBuffer {
                  ~~~~~~
!!! error TS2420: Class 'Buffer' incorrectly implements interface 'IBuffer'.
!!! error TS2420:   Missing [string] or [number] index signature in type 'Buffer'.
    
    }
    